@@ -54,6 +54,7 @@ struct longjmp_buffer {
 
 CAMLextern struct longjmp_buffer * caml_external_raise;
 extern value caml_exn_bucket;
+int caml_is_special_exception(value exn);
 
 /* </private> */
 
